2007-12-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Peter Kjellerstedt  <pkj at axis com>

	* gst-libs/gst/rtsp/gstrtspconnection.c:
	(gst_rtsp_connection_free):
	Close control sockets. Fixes #503440.

2007-12-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstdecodebin2.c: (analyze_new_pad), (connect_pad):
	Expose the right pad in the right place with the right element.

2007-12-13  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/pbutils/descriptions.c: (formats):
	  Add description for 'private' dts caps (who come up with that name?).

2007-12-13  Tim-Philipp Müller  <tim at centricular dot net>

	* Makefile.am:
	  Add check-exports target and run it with 'make check'.

	* configure.ac:
	  Be stricter about what we export in our libraries: change regexp so that
	  we only export _gst_foo(), but not __gst_foo().

	* gst-libs/gst/cdda/base64.h: (rfc822_binary):
	* gst-libs/gst/cdda/sha1.h: (sha_init), (sha_update), (sha_final):
	  Change internal functions to __gst_foo so they dont' get exported.

	* win32/common/libgstaudio.def:
	  Add missing symbols.

2007-12-11  David Schleef  <ds@schleef.org>

	* ChangeLog: remove conflict markers

2007-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/gnomevfs/Makefile.am:
	* ext/gnomevfs/gstgnomevfssrc.c: (gst_gnome_vfs_src_unicodify):
	  Use gst_tag_freeform_string_to_utf8() here, which also takes
	  into account any character sets specified by the user via
	  environment variables.

2007-12-10  Wim Taymans  <wim.taymans@gmail.com>

	* gst/audioconvert/Makefile.am:
	Also link to libm.

2007-12-10  Wim Taymans  <wim.taymans@gmail.com>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_audio_caps):
	No need for floating point operations here. avoids having to link
	against the math library too.

2007-12-10  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/pbutils/descriptions.c: (formats),
	  (format_info_get_desc):